@@ -8,11 +8,11 @@ author: conceptdev
 ms.author: crdun
 ms.date: 06/02/2018
 ms.openlocfilehash: 9c564789f704180e9acc9f96dcba5e7d6eb20634
-ms.sourcegitcommit: 6be6374664cd96a7d924c2e0c37aeec4adf8be13
+ms.sourcegitcommit: 4b402d1c508fa84e4fc3171a6e43b811323948fc
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51617239"
+ms.lasthandoff: 04/23/2019
+ms.locfileid: "60946736"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Réglage des paramètres de mémoire Java pour le concepteur Android
 
@@ -24,11 +24,11 @@ En commençant par Xamarin Studio 5.7.2.7 (et versions ultérieur, Visual Studio
 
 Les noms de propriété suivantes correspondent aux java indiqué [option de ligne de commande](http://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html)
 
-- **AndroidDesignerJavaRendererMinMemory** Xms -
+- **AndroidDesignerJavaRendererMinMemory** -Xms
 
-- **AndroidDesignerJavaRendererMaxMemory** - Xmx
+- **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **AndroidDesignerJavaRendererPermSize** - XX : MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
 
 
 # <a name="visual-studiotabwindows"></a>[Visual Studio](#tab/windows)
